--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -1,3 +1,13 @@
+.alert-overlay {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 9999;
+    width: 100%;
+    margin: 0;
+}
+
 main > .container, main > .container-fluid
 {
     padding: 15px 15px 50px;
